Update index.html with angular and other script

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head ng-app="foodBuddy">
     <meta charset="utf-8" />
     <title>foodBuddy</title>
   </head>
   <body>
     <h1>foodBuddy</h1>
   </body>
+
+  <script type="/lib/angular/angular.min.js"></script>
+  <script type="/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script type="/app/app.js"></script>
+  <script type="/app//services/services.js"></script>
 </html>
