--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <script src="/lib/angular/angular.min.js"></script>
     <script src="/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="lib/ng-table/ng-table.min.js"></script>
     <script src="/app/app.js"></script>
     <script src="/app/services/services.js"></script>
     <script src="/app/report/report.js"></script>
+    <script src="/app/public/public.js"></script>
+
     <title>foodBuddy</title>
   </head>
 
