--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,8 @@
       <ul>
         <li><a href='#/public' class='index'>Public Lists</a></li>
         <li><a href='#/lists' class='create'>Your Lists</a></li>
-
+        <li><a href='#/signin' class='signin'>Sign In</a></li>
+        <li><a href='#/signup' class='signin'>Sign Up</a></li>
       </ul>
     </div>
 
