--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <script src="/app/app.js"></script>
     <script src="/app/services/services.js"></script>
     <script src="/app/public/public.js"></script>
+    <script src="/app/auth/auth.js"></script>
 
     <title>foodBuddy</title>
   </head>
