--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <script src="/app/services/services.js"></script>
     <script src="/app/public/public.js"></script>
     <script src="/app/auth/auth.js"></script>
+    <script src="/app/private/private.js"></script>
 
     <title>foodBuddy</title>
   </head>
@@ -20,7 +21,7 @@
     <div class='navigation'>
       <ul>
         <li><a href='#/public' class='index'>Public Lists</a></li>
-        <li><a href='#/lists' class='create'>Your Lists</a></li>
+        <li><a href='#/private' class='create'>Your Lists</a></li>
         <li><a href='#/signin' class='signin'>Sign In</a></li>
         <li><a href='#/signup' class='signin'>Sign Up</a></li>
       </ul>
