--- a/client/index.html
+++ b/client/index.html
@@ -22,8 +22,9 @@
       <ul>
         <li><a href='#/public' class='index'>Public Lists</a></li>
         <li><a href='#/private' class='create'>Your Lists</a></li>
-        <li><a href='#/signin' class='signin'>Sign In</a></li>
+        <li><a href='#/signin' class='signup'>Sign In</a></li>
         <li><a href='#/signup' class='signin'>Sign Up</a></li>
+        <li><a href='#/logout' class='logout'>Logout</a></li>
       </ul>
     </div>
 
