--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <script src="/app/public/public.js"></script>
     <script src="/app/auth/auth.js"></script>
     <script src="/app/private/private.js"></script>
+    <!-- <script src="/app/private/listItem.js"></script> -->
 
     <title>foodBuddy</title>
   </head>
@@ -29,6 +30,8 @@
     </div>
 
     <div ui-view></div>
+    <div ui-view="lists"></div>
+    <div ui-view="listItems"></div>
   </body>
 
 </html>
