--- a/client/index.html
+++ b/client/index.html
@@ -11,27 +11,31 @@
     <script src="/app/public/public.js"></script>
     <script src="/app/auth/auth.js"></script>
     <script src="/app/private/private.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheet/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <!-- <script src="/app/private/listItem.js"></script> -->
 
     <title>foodBuddy</title>
   </head>
 
   <body>
-    <h1>foodBuddy</h1>
-
-    <div class='navigation'>
-      <ul>
-        <li><a href='#/public' class='index'>Public Lists</a></li>
-        <li><a href='#/private' class='create'>Your Lists</a></li>
-        <li><a href='#/signin' class='signup'>Sign In</a></li>
-        <li><a href='#/signup' class='signin'>Sign Up</a></li>
-        <li><a href='#/logout' class='logout'>Logout</a></li>
-      </ul>
+    <div class='jumbotron' id='hero'>
+    <h1 class='logo'>foodBuddy</h1>
     </div>
-
-    <div ui-view></div>
-    <div ui-view="lists"></div>
-    <div ui-view="listItems"></div>
+    <nav class='navbar navbar-inverse navbar-fixed-top'>
+      <div id='navbar' class='navbar-collapse collapse mynav'>
+        <ul class='nav navbar-nav'>
+          <li><a href='#/public' class='index'>Public Lists</a></li>
+          <li><a href='#/private' class='create'>Your Lists</a></li>
+          <li><a href='#/signin' class='signup'>Sign In</a></li>
+          <li><a href='#/signup' class='signin'>Sign Up</a></li>
+          <li><a href='#/logout' class='logout'>Logout</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class='mycontainer' ui-view></div>
+    <div class='yourlists sidebar col-sm-4 col-md-4' ui-view="lists"></div>
+    <div class='thelist col-sm-15 col-md-16 main' ui-view="listItems"></div>
   </body>
 
 </html>
