--- a/client/app/public/public.html
+++ b/client/app/public/public.html
@@ -4,7 +4,7 @@
   	<label class='mylable' for="itemName">Item Name</label>
     <input class='text mytext' type='text' id='itemName' ng-model='item.name'>
 
-  	<label class='mylable' for="itemPrice">Item Price</label>
+  	<label class='mylable' for="itemPrice">Unit Price</label>
     <input class='text mytext' type='text' id='itemPrice' ng-model='item.price'>
 
 		<select class='myselect' ng-model="item.selectedStore" ng-options="storename for storename in stores"></select>
