--- a/client/index.html
+++ b/client/index.html
@@ -23,13 +23,13 @@
     <h1 class='logo'>foodBuddy</h1>
     </div>
     <nav class='navbar navbar-inverse navbar-fixed-top'>
-      <div id='navbar' class='navbar-collapse collapse mynav'>
+      <div id='navbar' class='navbar-collapse collapse mynav' ng-controller='AuthCtrl'>
         <ul class='nav navbar-nav'>
           <li><a href='#/public' class='index'>Public Lists</a></li>
           <li><a href='#/private' class='create'>Your Lists</a></li>
           <li><a href='#/signin' class='signup'>Sign In</a></li>
           <li><a href='#/signup' class='signin'>Sign Up</a></li>
-          <li><a href='#/logout' class='logout'>Logout</a></li>
+          <li><a href='#/signin' class='logout' ng-click='logout()'>Logout</a></li>
         </ul>
       </div>
     </nav>
