Add error notification when adding invalid item to list

--- a/client/app/private/listItem.html
+++ b/client/app/private/listItem.html
@@ -5,6 +5,7 @@
 
     <input type='submit' value='add item'>
   </form>
+  <div class='invalid' ng-hide='error'>{{errorMessage}}</div>
 </div>
 
 <table class='myTable'>
